# ticket-price-bot

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: bot.yml  lint.yml  scheduled_ticket_parser.yml
input/: input_url.txt
src/: main.py  scraper.py  ticket_notification_bot.py  ticket_price_scraper.py
src/utils/: utils.py
